[gd_scene load_steps=84 format=3 uid="uid://dvmbqyfin80a5"]

[ext_resource type="Script" uid="uid://1wkdvot7hqop" path="res://player.gd" id="1_tj0vx"]
[ext_resource type="LabelSettings" uid="uid://0nxpjtu3i5wd" path="res://napisy_GUI.tres" id="2_8caby"]
[ext_resource type="Texture2D" uid="uid://bu6kkp5f2rcjj" path="res://sprites/1/Samurai/Idle.png" id="2_rihsh"]
[ext_resource type="Texture2D" uid="uid://bd8ako5mt84ke" path="res://sprites/1/Samurai/Attack_2.png" id="2_uqwy3"]
[ext_resource type="Texture2D" uid="uid://b2kufjpabkjc1" path="res://sprites/1/Samurai/Attack_3.png" id="3_8caby"]
[ext_resource type="LabelSettings" uid="uid://csxyhd5b3p4rq" path="res://napisy_GUI_smierc.tres" id="3_61wwb"]
[ext_resource type="Texture2D" uid="uid://cj626snww1rk3" path="res://sprites/1/Samurai/Jump.png" id="3_tj0vx"]
[ext_resource type="Texture2D" uid="uid://erby4g126j1c" path="res://sprites/1/Samurai/Run.png" id="4_bhnal"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rnc2c"]
atlas = ExtResource("2_uqwy3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv66c"]
atlas = ExtResource("2_uqwy3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_66ff5"]
atlas = ExtResource("2_uqwy3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4c0v"]
atlas = ExtResource("2_uqwy3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j1yk"]
atlas = ExtResource("3_8caby")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5grbp"]
atlas = ExtResource("3_8caby")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj7h3"]
atlas = ExtResource("3_8caby")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vop8p"]
atlas = ExtResource("2_rihsh")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj0vx"]
atlas = ExtResource("2_rihsh")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhnal"]
atlas = ExtResource("2_rihsh")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqwy3"]
atlas = ExtResource("2_rihsh")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8caby"]
atlas = ExtResource("2_rihsh")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_61wwb"]
atlas = ExtResource("2_rihsh")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dedv"]
atlas = ExtResource("3_tj0vx")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqpan"]
atlas = ExtResource("3_tj0vx")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gy1f"]
atlas = ExtResource("3_tj0vx")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uns0w"]
atlas = ExtResource("3_tj0vx")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwfv5"]
atlas = ExtResource("3_tj0vx")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i62jw"]
atlas = ExtResource("3_tj0vx")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikxd4"]
atlas = ExtResource("3_tj0vx")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r433l"]
atlas = ExtResource("4_bhnal")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w63e"]
atlas = ExtResource("4_bhnal")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5hk3"]
atlas = ExtResource("4_bhnal")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0yjm"]
atlas = ExtResource("4_bhnal")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q2f1"]
atlas = ExtResource("4_bhnal")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ark"]
atlas = ExtResource("4_bhnal")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2mwh"]
atlas = ExtResource("4_bhnal")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1i82"]
atlas = ExtResource("4_bhnal")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_pylmc"]
animations = [{
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_rnc2c")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_fv66c")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_66ff5")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_o4c0v")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j1yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5grbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj7h3")
}],
"loop": true,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vop8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj0vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhnal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqwy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8caby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61wwb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dedv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqpan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gy1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uns0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwfv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i62jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikxd4")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r433l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w63e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5hk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0yjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q2f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ark")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2mwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1i82")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uqwy3"]
radius = 25.1198
height = 57.4166

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
height = 64.0

[sub_resource type="Animation" id="Animation_634y6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}

[sub_resource type="Animation" id="Animation_opasm"]
resource_name = "attack_l"
length = 0.35
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y3neu"]
resource_name = "attack_r"
length = 0.35
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_efrwb"]
resource_name = "idle_l"
length = 0.55
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_hiqhm"]
resource_name = "idle_r"
length = 0.55
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hl5qd"]
resource_name = "jump_l"
length = 0.65
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_pbfsw"]
resource_name = "jump_r"
length = 0.65
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tkwlq"]
resource_name = "run_l"
length = 0.75
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ek41f"]
resource_name = "run_r"
length = 0.75
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tmop"]
_data = {
&"RESET": SubResource("Animation_634y6"),
&"attack_l": SubResource("Animation_opasm"),
&"attack_r": SubResource("Animation_y3neu"),
&"idle_l": SubResource("Animation_efrwb"),
&"idle_r": SubResource("Animation_hiqhm"),
&"jump_l": SubResource("Animation_hl5qd"),
&"jump_r": SubResource("Animation_pbfsw"),
&"run_l": SubResource("Animation_tkwlq"),
&"run_r": SubResource("Animation_ek41f")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uqwy3"]
animation = &"attack_r"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8caby"]
animation = &"attack_r"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_61wwb"]
animation = &"attack_l"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2dedv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_uqwy3")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_8caby")
blend_point_1/pos = Vector2(1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_61wwb")
blend_point_2/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_uqwy3"]
graph_offset = Vector2(-371, 102)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_2dedv")
nodes/BlendSpace2D/position = Vector2(60, 120)
node_connections = [&"output", 0, &"BlendSpace2D"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_khis8"]
animation = &"idle_l"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b88wv"]
animation = &"idle_r"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqtel"]
animation = &"idle_r"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_pgbbb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_khis8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_b88wv")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_hqtel")
blend_point_2/pos = Vector2(1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_331ug"]
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_pgbbb")
nodes/BlendSpace2D/position = Vector2(180, 80)
nodes/output/position = Vector2(660, 140)
node_connections = [&"output", 0, &"BlendSpace2D"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ny14h"]
animation = &"jump_l"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ibah8"]
animation = &"jump_r"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sweqy"]
animation = &"jump_r"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3iwfv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ny14h")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ibah8")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_sweqy")
blend_point_2/pos = Vector2(1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qwsg1"]
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_3iwfv")
nodes/BlendSpace2D/position = Vector2(80, 140)
nodes/output/position = Vector2(520, 160)
node_connections = [&"output", 0, &"BlendSpace2D"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1xqrm"]
animation = &"run_l"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bfour"]
animation = &"run_r"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hs0m"]
animation = &"run_r"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8gr2b"]
blend_point_0/node = SubResource("AnimationNodeAnimation_1xqrm")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_bfour")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_2hs0m")
blend_point_2/pos = Vector2(1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_vl8ci"]
graph_offset = Vector2(-48.7273, 75.8182)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_8gr2b")
nodes/BlendSpace2D/position = Vector2(120, 120)
nodes/output/position = Vector2(480, 160)
node_connections = [&"output", 0, &"BlendSpace2D"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ieltc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fddr8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oybyf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ajfva"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ef02"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pfmca"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_76oay"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8caby"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61wwb"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2dedv"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fqpan"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7gy1f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uns0w"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b4uyv"]
states/Start/position = Vector2(240, 108)
states/attack/node = SubResource("AnimationNodeBlendTree_uqwy3")
states/attack/position = Vector2(440, 236)
states/idle/node = SubResource("AnimationNodeBlendTree_331ug")
states/idle/position = Vector2(440, 67)
states/jump/node = SubResource("AnimationNodeBlendTree_qwsg1")
states/jump/position = Vector2(633, 236)
states/run/node = SubResource("AnimationNodeBlendTree_vl8ci")
states/run/position = Vector2(633, 67)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_ieltc"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_fddr8"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_oybyf"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_ajfva"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_5ef02"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_pfmca"), "jump", "run", SubResource("AnimationNodeStateMachineTransition_76oay"), "attack", "run", SubResource("AnimationNodeStateMachineTransition_8caby"), "attack", "jump", SubResource("AnimationNodeStateMachineTransition_61wwb"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_2dedv"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_fqpan"), "run", "attack", SubResource("AnimationNodeStateMachineTransition_7gy1f"), "jump", "attack", SubResource("AnimationNodeStateMachineTransition_uns0w")]
graph_offset = Vector2(7, 26)

[node name="CharacterBody2D" type="CharacterBody2D"]
physics_interpolation_mode = 1
collision_mask = 0
up_direction = Vector2(0.999528, -0.0307246)
script = ExtResource("1_tj0vx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 20
limit_right = 1680
limit_bottom = 720
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.02
drag_top_margin = 0.02
drag_right_margin = 0.02
drag_bottom_margin = 0.02

[node name="GUI" type="CanvasLayer" parent="Camera2D"]

[node name="Points" type="Label" parent="Camera2D/GUI"]
offset_left = 23.0
offset_top = 15.0
offset_right = 63.0
offset_bottom = 38.0
label_settings = ExtResource("2_8caby")

[node name="Health" type="Label" parent="Camera2D/GUI"]
offset_left = 25.0
offset_top = 63.0
offset_right = 111.0
offset_bottom = 108.0
label_settings = ExtResource("2_8caby")

[node name="DeadInfo" type="Label" parent="Camera2D/GUI"]
offset_left = 441.0
offset_top = 267.0
offset_right = 481.0
offset_bottom = 333.0
label_settings = ExtResource("3_61wwb")

[node name="PointsFinal" type="Label" parent="Camera2D/GUI"]
offset_left = 441.0
offset_top = 348.0
offset_right = 481.0
offset_bottom = 420.0
label_settings = ExtResource("3_61wwb")

[node name="DeadGraphic" type="Polygon2D" parent="Camera2D/GUI"]
visible = false
scale = Vector2(1.005, 1.005)
color = Color(0.768627, 0, 0, 0.231373)
polygon = PackedVector2Array(-181.095, -157.214, -178.109, -157.214, -216.915, 498.507, -122.388, 800.995, 1504.48, 805.97, 1490.55, -163.184, -175.124, -157.214)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 10.5)
scale = Vector2(1, 0.835938)
sprite_frames = SubResource("SpriteFrames_pylmc")
animation = &"attack"

[node name="Swing" type="Area2D" parent="AnimatedSprite2D"]

[node name="SwingCol" type="CollisionShape2D" parent="AnimatedSprite2D/Swing"]
position = Vector2(-41, 23.3271)
rotation = -1.55906
shape = SubResource("CapsuleShape2D_uqwy3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
physics_interpolation_mode = 1
position = Vector2(1, 32)
shape = SubResource("CapsuleShape2D_onrkg")
one_way_collision_margin = 0.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-10, 35)
target_position = Vector2(0, 30)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(8, 35)
target_position = Vector2(0, 30)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_5tmop")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../AnimatedSprite2D")
tree_root = SubResource("AnimationNodeStateMachine_b4uyv")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/BlendSpace2D/blend_position = Vector2(-0.367401, 0.0852017)
parameters/idle/BlendSpace2D/blend_position = Vector2(0.148899, 0.31401)
parameters/jump/BlendSpace2D/blend_position = Vector2(-0.00241739, 0.0136986)
parameters/run/BlendSpace2D/blend_position = Vector2(0.0431718, 0.139014)

[node name="Nickname" type="Label" parent="."]
offset_left = -70.0
offset_top = -27.0
offset_right = 70.0
offset_bottom = -4.0
theme_override_colors/font_color = Color(0.968627, 0.890196, 0.780392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
